--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       </div>
       <div>
         <p>787 Windshear</p>
-        <audio controls>
+        <audio controls loop>
           <source src="windshear.mp3" type="audio/Mp3 ">
         </audio>
       </div>
