--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div id="container">
       <div>
         <p>787 Terrian Pull Up</p>
-        <audio controls>
+        <audio controls loop>
           <source src="terrain_pull_up_gws.mp3" type="audio/Mp3 ">
         </audio>
       </div>
