--- a/index.html
+++ b/index.html
@@ -31,50 +31,43 @@
       </div>
       <div>
         <p>787 Fire</p>
-        <audio controls>
+        <audio controls loop>
           <source src="fire_bell_modern_757_767.mp3" type="audio/Mp3 ">
         </audio>
       </div>
       <div>
         <p>787 Evacuate</p>
-        <audio controls>
+        <audio controls loop>
           <source src="md80_evacuate.mp3" type="audio/Mp3 ">
         </audio>
       </div>
       <div>
         <p>787 Engine Startup</p>
-        <audio controls>
+        <audio controls loop>
           <source src="turbine_startup.mp3" type="audio/Mp3 ">
         </audio>
       </div>
       <div>
         <p>787 Landing</p>
-        <audio controls>
+        <audio controls loop>
           <source src="airplane-landing-01.mp3" type="audio/Mp3 ">
         </audio>
       </div>
       <div>
         <p>787 Take Off</p>
-        <audio controls>
+        <audio controls loop>
           <source src="airplane-take-off-01.mp3" type="audio/Mp3 ">
         </audio>
       </div>
       <div>
         <p>787 Ambience</p>
-        <audio controls>
+        <audio controls loop>
           <source src="Airplane-ambience-sound-effect.mp3" type="audio/Mp3 ">
         </audio>
       </div>
       <div>
         <p>787 Tower Take Off Comms</p>
-        <audio controls>
-          <source src="airport__tower.mp3" type="audio/Mp3 ">
-        </audio>
-      </div>
-
-      <div>
-        <p>787 Tower Take Off Comms</p>
-        <audio controls>
+        <audio controls loop>
           <source src="airport__tower.mp3" type="audio/Mp3 ">
         </audio>
       </div>
