--- a/index.html
+++ b/index.html
@@ -74,13 +74,13 @@
       <div>
         <p>Engine Rattle</p>
         <audio controls loop>
-          <source src="rattleroll.wav" type="audio/Wav ">
+          <source src="rattleroll.wav" type="audio/wav ">
         </audio>
       </div>
       <div>
         <p>Engine Start</p>
         <audio controls loop>
-          <source src="engine-start.wav" type="audio/Wav ">
+          <source src="engine-start.wav" type="audio/wav ">
         </audio>
       </div>
       <img src="787.jpeg" />
