--- a/index.html
+++ b/index.html
@@ -83,6 +83,24 @@
           <source src="engine-start.wav" type="audio/wav ">
         </audio>
       </div>
+      <div>
+        <p>LCC Engine Start</p>
+        <audio controls loop>
+          <source src="turbine_start.wav" type="audio/wav ">
+        </audio>
+      </div>
+      <div>
+        <p>LCC Engine Stop</p>
+        <audio controls loop>
+          <source src="engine-start.wav" type="audio/wav ">
+        </audio>
+      </div>
+      <div>
+        <p>LCC Engine Running</p>
+        <audio controls loop>
+          <source src="turbojet_fan.wav" type="audio/wav ">
+        </audio>
+      </div>
       <img src="787.jpeg" />
   </div>
 
